Revert "Got rid of attach button"
This reverts commit 768cd5823723775e164be06faad8fe507cf9ffd5.

--- a/views/partials/newPost.handlebars
+++ b/views/partials/newPost.handlebars
@@ -23,6 +23,17 @@
 							    <option value="panel-danger">Angry</option>
 							</select>
 					</div>
+
+					<div class="col-md-1 pull-left">
+						<!-- Single button dropdown menu for attachments -->
+						<select type="button" class="form-control" name="attach">
+							<option>Attach</option>
+						    <option value="one">Video</option>
+						    <option value="two">Audio</option>
+						    <option value="three">Images</option>
+						</select>
+					</div>
+
 					<div class="col-md-6 pull-right">
 						<!-- error checking goes here -->
 						<!--<a href="javascript:%20check_empty()" id="submit">Send</a>-->
