--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,9 +18,11 @@
 
 	<!-- body for the titlebar description and newPost popup -->
 	<body>
-		<div>
+		<div id="wrapper">
 			<!-- fixed position navibar on top of screen -->
 			{{>feelzNaviBar}}
+
+			{{> sideBar}}
 
 			<div id="page-content-wrapper" class="col-md-10"> 
 				<div class="container-fluid">
