--- a/views/partials/feelzNaviBar.handlebars
+++ b/views/partials/feelzNaviBar.handlebars
@@ -5,14 +5,26 @@
 	<nav id="feelzNaviBar" class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
-				
+				<!-- collapse formatting for mobile -->
+				<!-- remove pull-left when siebar gets formatted properly -->
+		  		<button id="menu-toggle" type="button" class="pull-left navbar-toggle collapsed" data-toggle="collapse" aria-expanded="false" aria-controls="navbar">
+		   		 	<span class="sr-only">Menu</span>
+					<span class="icon-bar"></span>
+		        	<span class="icon-bar"></span>
+		    	    <span class="icon-bar"></span>
+				</button>
 				<!-- navibar title -->
-				<a class="navbar-brand" href="/menu.html"><b>FeelzApp</b></a>
+				<a class="navbar-brand" href="/"><b>FeelzApp</b></a>
 
 				<div class="navbar-left pull-left">
 					<p class="navbar-text">Hi, {{username}}!</p>
 				</div>
-				
+				<div class="navbar-right pull-right">
+					<!--- make newpost button on the navibar.  
+							It will change to "back" on form load. -->
+					<button id="postButtonToggle" type="button" class="btn btn-default navbar-btn">New Post</button>
+				</div>
+			</div>
 
 		</div>
 	</nav>
