--- a/views/partials/feelzNaviBarNoPost_alt.handlebars
+++ b/views/partials/feelzNaviBarNoPost_alt.handlebars
@@ -7,7 +7,7 @@
 			<div class="navbar-header">
 				<!-- collapse formatting for mobile -->
 				<!-- remove pull-left when siebar gets formatted properly -->
-		  		<button id="menu-toggle" type="button" class="pull-left navbar-toggle collapsed" data-toggle="collapse" aria-expanded="false" aria-controls="navbar">
+		  		<button id="menu-toggle_alt" type="button" class="pull-left navbar-toggle collapsed" data-toggle="collapse" data-target="#menu_collapse_alt">
 		   		 	<span class="sr-only">Menu</span>
 					<span class="icon-bar"></span>
 		        	<span class="icon-bar"></span>
@@ -19,6 +19,40 @@
 				<div class="navbar-left pull-left">
 					<p class="navbar-text" style="margin-right:3px">Hi, {{username}}!</p>
 				</div>
+
+				<!-- Collect the nav links, forms, and other content for toggling -->
+    			<div class="collapse navbar-collapse" id="menu_collapse_alt">
+					<ul class="nav navbar-nav">
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Sort All Posts <span class="caret"></span></a>
+							<ul class="sort-menu" role="menu">
+								<li role="presentation"><a href="/sort/date">Newest</a></li>
+								<li role="presentation"><a href="/sort/date/bump">Best Today</a></li>
+								<li role="presentation"><a href="/sort/bump">Top posts</a></li>	
+					  		</ul>
+						</li>
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Moods <span class="caret"></span></a>
+							<ul class="Moods-menu" role="menu">
+								<li role="presentation"><a href="/category/1">Chill</a></li> <!-- Grey -->
+								<li role="presentation"><a href="/category/2">Sad</a></li> <!-- Blue -->
+								<li role="presentation"><a href="/category/3">Good</a></li> <!-- Green -->
+								<li role="presentation"><a href="/category/4">Party</a></li> <!-- Purple -->
+								<li role="presentation"><a href="/category/5">Happy</a></li> <!-- Yellow -->
+								<li role="presentation"><a href="/category/6">Angry</a></li> <!-- Red -->
+					  		</ul>
+						</li>
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Help and Settings <span class="caret"></span></a>
+							<ul class="dropdown-menu" role="menu">
+								<li role="presentation"><a href="/Help">Help</a></li>
+								<li role="presentation"><a href="/Account_Settings">Account Settings</a></li>
+								<li role="presentation"><a href="/About">About</a></li>
+								<li role="presentation"><a id="logoutButton" href="/Login">Log Out</a> <br/> <br/> </li>
+					  		</ul>
+						</li>
+					</ul>
+    			</div>
 			</div>
 
 		</div>
