add tracking code support, darken menu icon

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -14,6 +14,8 @@
 		<link href="css/FeelzApp.css" rel="stylesheet">
 		<!-- page css files -->
 		<link href="/css/about_and_help.css" rel="stylesheet">
+		<!-- woopra a/b testing tracking script -->
+		{{> tracking_code_script}}
 	</head>
 
 	<body>
