--- a/views/accSettings.handlebars
+++ b/views/accSettings.handlebars
@@ -1,19 +1,22 @@
 <!doctype html>
 
 <html>
-<head>
-	<title>FeelzApp</title>	
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
-	<!-- bootstrap css files -->
-	<link href="/css/bootstrap.min.css" rel="stylesheet">
-	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
-	<!-- feelzapp universal css files -->
-	<link href="/css/simple-sidebar.css" rel="stylesheet">
-	<link href="/css/feelzNaviBar.css" rel="stylesheet">
-	<link href="/css/FeelzApp.css" rel="stylesheet">
-	<!-- page css files -->
-	<link href="/css/accSettings.css" rel="stylesheet">
+	<head>
+		<title>FeelzApp</title>	
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
+		<!-- bootstrap css files -->
+		<link href="/css/bootstrap.min.css" rel="stylesheet">
+		<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
+		<!-- feelzapp universal css files -->
+		<link href="/css/simple-sidebar.css" rel="stylesheet">
+		<link href="/css/feelzNaviBar.css" rel="stylesheet">
+		<link href="/css/FeelzApp.css" rel="stylesheet">
+		<!-- page css files -->
+		<link href="/css/accSettings.css" rel="stylesheet">
+		<!-- woopra a/b testing tracking script -->
+		{{> tracking_code_script}}
+	</head>
 
 
 <body>
