--- a/public/css/feelzNaviBar.css
+++ b/public/css/feelzNaviBar.css
@@ -31,6 +31,10 @@
   padding-bottom: 10px;
 }
 
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: #777777;
+}
+
 .menuSeparator {
   height: 1px;
   margin: 9px 0;
