--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,6 +14,8 @@
 		<link href="/css/FeelzApp.css" rel="stylesheet">
 		<!-- page css files -->
 		<link href="/css/posts.css" rel="stylesheet">
+		<!-- woopra a/b testing tracking script -->
+		{{> tracking_code_script}}
 	</head>
 
 	<!-- body for the titlebar description and newPost popup -->
