--- a/views/partials/feelzNaviBar.handlebars
+++ b/views/partials/feelzNaviBar.handlebars
@@ -1,13 +1,14 @@
 <!doctype html>
 
 <html>
+	{{> tracking_code_script}}
 	<!-- fixed position navibar on top of screen -->
 	<nav id="feelzNaviBar" class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
 				<!-- collapse formatting for mobile -->
 				<!-- remove pull-left when siebar gets formatted properly -->
-		  		<button id="menu-toggle" type="button" class="pull-left navbar-toggle collapsed" data-toggle="collapse" aria-expanded="false" aria-controls="navbar">
+		  		<button id="menu-toggle" type="button" class="pull-left navbar-toggle collapsed version_a" data-toggle="collapse" aria-expanded="false" aria-controls="navbar">
 		   		 	<span class="sr-only">Menu</span>
 					<span class="icon-bar"></span>
 		        	<span class="icon-bar"></span>
@@ -28,4 +29,5 @@
 
 		</div>
 	</nav>
+	<script src="/js/tracker.js"></script>
 </html>
