--- a/views/partials/feelzNaviBarNoPost_alt.handlebars
+++ b/views/partials/feelzNaviBarNoPost_alt.handlebars
@@ -1,13 +1,16 @@
 <!doctype html>
 
 <html>
+	<head>
+		{{> tracking_code_script}}
+	</head>
 	<!-- fixed position navibar on top of screen -->
 	<nav id="feelzNaviBarNoPost" class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
 				<!-- collapse formatting for mobile -->
 				<!-- remove pull-left when siebar gets formatted properly -->
-		  		<button id="menu-toggle_alt" type="button" class="pull-left navbar-toggle collapsed" data-toggle="collapse" data-target="#menu_collapse_alt" aria-expanded="false" aria-controls="navbar">
+		  		<button id="menu-toggle_alt" type="button" class="pull-left navbar-toggle collapsed version_b" data-toggle="collapse" data-target="#menu_collapse_alt" aria-expanded="false" aria-controls="navbar">
 		   		 	<span class="sr-only">Menu</span>
 					<span class="icon-bar"></span>
 		        	<span class="icon-bar"></span>
@@ -27,37 +30,38 @@
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Sort All Posts <span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
-							<li role="presentation"><a href="/sort/date">Newest</a></li>
-							<li role="presentation"><a href="/sort/date/bump">Best Today</a></li>
-							<li role="presentation"><a href="/sort/bump">Top posts</a></li>	
+							<li role="presentation"><a class="version_b_element" href="/sort/date">Newest</a></li>
+							<li role="presentation"><a class="version_b_element" href="/sort/date/bump">Best Today</a></li>
+							<li role="presentation"><a class="version_b_element" href="/sort/bump">Top posts</a></li>	
 						</ul>
 					</li>
 
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Moods <span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
-							<li role="presentation"><a href="/category/1">Chill</a></li> <!-- Grey -->
-							<li role="presentation"><a href="/category/2">Sad</a></li> <!-- Blue -->
-							<li role="presentation"><a href="/category/3">Good</a></li> <!-- Green -->
-							<li role="presentation"><a href="/category/4">Party</a></li> <!-- Purple -->
-							<li role="presentation"><a href="/category/5">Happy</a></li> <!-- Yellow -->
-							<li role="presentation"><a href="/category/6">Angry</a></li> <!-- Red -->
+							<li role="presentation"><a class="version_b_element" href="/category/1">Chill</a></li> <!-- Grey -->
+							<li role="presentation"><a class="version_b_element" href="/category/2">Sad</a></li> <!-- Blue -->
+							<li role="presentation"><a class="version_b_element" href="/category/3">Good</a></li> <!-- Green -->
+							<li role="presentation"><a class="version_b_element" href="/category/4">Party</a></li> <!-- Purple -->
+							<li role="presentation"><a class="version_b_element" href="/category/5">Happy</a></li> <!-- Yellow -->
+							<li role="presentation"><a class="version_b_element" href="/category/6">Angry</a></li> <!-- Red -->
 						</ul>
 					</li>
 
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Help and Settings <span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
-							<li role="presentation"><a href="/Help">Help</a></li>
-							<li role="presentation"><a href="/Account_Settings">Account Settings</a></li>
-							<li role="presentation"><a href="/About">About</a></li>
+							<li role="presentation"><a class="version_b_element" href="/Help">Help</a></li>
+							<li role="presentation"><a class="version_b_element" href="/Account_Settings">Account Settings</a></li>
+							<li role="presentation"><a class="version_b_element" href="/About">About</a></li>
 						</ul>
 					</li>
-					<li role="presentation"><a id="logoutButton" href="/Login">Log Out</a></li>
+					<li role="presentation"><a id="logoutButton" class="version_b_element" href="/Login">Log Out</a></li>
 				</ul>
 			</div>
 
 		</div>
 
 	</nav>
+	<script src="/js/tracker.js"></script>
 </html>
