--- a/views/partials/sideBar.handlebars
+++ b/views/partials/sideBar.handlebars
@@ -1,38 +1,42 @@
 <!doctype html>
 
 <html>
-
+	<head>
+		{{> tracking_code_script}}
+	</head>
     <div id="sidebar-wrapper">
 		<ul class="sidebar-nav">
 			<!--<li class="sidebar-brand">Menu</li>
 			<li role="presentation"><a href="/">Home</a></li>w -->
 			<li role="presentation" class="active">Sort All Posts</li>
 			<li class="menuSeparator"></li>
-			<li role="presentation"><a href="/sort/date">Newest</a></li>
-			<li role="presentation"><a href="/sort/date/bump">Best Today</a></li>
-			<li role="presentation"><a href="/sort/bump">Top posts</a></li>			
+			<li role="presentation"><a class="version_a_element" href="/sort/date">Newest</a></li>
+			<li role="presentation"><a class="version_a_element" href="/sort/date/bump">Best Today</a></li>
+			<li role="presentation"><a class="version_a_element" href="/sort/bump">Top posts</a></li>			
 			<li class="menuSeparator"></li>
 
 			<li role="presentation">Moods<li>
 			<li class="menuSeparator"></li>
 
-			<li role="presentation"><a href="/category/1">Chill</a></li> <!-- Grey -->
-			<li role="presentation"><a href="/category/2">Sad</a></li> <!-- Blue -->
-			<li role="presentation"><a href="/category/3">Good</a></li> <!-- Green -->
-			<li role="presentation"><a href="/category/4">Party</a></li> <!-- Purple -->
-			<li role="presentation"><a href="/category/5">Happy</a></li> <!-- Yellow -->
-			<li role="presentation"><a href="/category/6">Angry</a></li> <!-- Red -->
+			<li role="presentation"><a class="version_a_element" href="/category/1">Chill</a></li> <!-- Grey -->
+			<li role="presentation"><a class="version_a_element" href="/category/2">Sad</a></li> <!-- Blue -->
+			<li role="presentation"><a class="version_a_element" href="/category/3">Good</a></li> <!-- Green -->
+			<li role="presentation"><a class="version_a_element" href="/category/4">Party</a></li> <!-- Purple -->
+			<li role="presentation"><a class="version_a_element" href="/category/5">Happy</a></li> <!-- Yellow -->
+			<li role="presentation"><a class="version_a_element" href="/category/6">Angry</a></li> <!-- Red -->
 			<li class="menuSeparator"></li>
 
 			<li role="presentation">Help and Settings<li>
 			<li class="menuSeparator"></li>
 			
-			<li role="presentation"><a href="/Help">Help</a></li>
-			<li role="presentation"><a href="/Account_Settings">Account Settings</a></li>
-			<li role="presentation"><a href="/About">About</a></li>
-			<li role="presentation"><a id="logoutButton" href="/Login">Log Out</a> <br/> <br/> </li>
+			<li role="presentation"><a class="version_a_element" href="/Help">Help</a></li>
+			<li role="presentation"><a class="version_a_element" href="/Account_Settings">Account Settings</a></li>
+			<li role="presentation"><a class="version_a_element" href="/About">About</a></li>
+			<li role="presentation"><a id="logoutButton" class="version_a_element" href="/Login">Log Out</a> <br/> <br/> </li>
 		</ul>
 	</div>
 	<!-- end sidebar-wrapper-->
+	
+	<script src="/js/tracker.js"></script>
 
 </html>
