--- a/views/partials/sideBar.handlebars
+++ b/views/partials/sideBar.handlebars
@@ -36,7 +36,7 @@
 		</ul>
 	</div>
 	<!-- end sidebar-wrapper-->
-	
+	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 	<script src="/js/tracker.js"></script>
 
 </html>
