--- a/views/partials/feelzNaviBarNoPost.handlebars
+++ b/views/partials/feelzNaviBarNoPost.handlebars
@@ -26,5 +26,6 @@
 
 		</div>
 	</nav>
+	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 	<script src="/js/tracker.js"></script>
 </html>
