--- a/views/partials/feelzNaviBarNoPost_alt.handlebars
+++ b/views/partials/feelzNaviBarNoPost_alt.handlebars
@@ -63,5 +63,6 @@
 		</div>
 
 	</nav>
+	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 	<script src="/js/tracker.js"></script>
 </html>
