consistency: fix help and about pages to use bootstrap

--- a/public/css/FeelzApp.css
+++ b/public/css/FeelzApp.css
@@ -28,6 +28,12 @@ h3 {
 h4 {
 	font-family: "Comic Sans MS", cursive, sans-serif;	
 }
+h5 {
+	font-family: "Comic Sans MS", cursive, sans-serif;	
+}
+h6 {
+	font-family: "Comic Sans MS", cursive, sans-serif;	
+}
 
 .panel-info {
 	margin-top: 15px;
