--- a/views/partials/postFull.handlebars
+++ b/views/partials/postFull.handlebars
@@ -8,8 +8,10 @@
 				<div class="panel-heading clearfix">
 	    			<h3 id="fullPostTitle" class="panel-title pull-left">0</h3>
 	    			<div class="pull-right">
+	    				<a id="bumpButton" class="btn btn-default btn-sm">bump
+	    					<span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
+	    				</a>
 	    				<strong id="fullPostBumpCount">placeholder</strong>
-	    				<a id="bumpButton" class="btn btn-default btn-sm">bump</a>
 	    				<a onclick="hidePopupPost()" >
 	    					<span class="glyphicon glyphicon-remove" aria-hidden="true" style="color:black" ></span>
 	    					<span class="sr-only">Close</span>
