--- a/views/accSettings.handlebars
+++ b/views/accSettings.handlebars
@@ -50,7 +50,7 @@
 						<input type="submit" id="submitChanges" class="btn btn-default" value="Update"></input>
 					</form>
 
-					<p>Facebook: </p>
+					<p>Connected to Facebook!</p>
 
 			 	 </div>
 			</div>
