--- a/views/accSettings_alt.handlebars
+++ b/views/accSettings_alt.handlebars
@@ -44,7 +44,7 @@
 				<input type="submit" id="submitChanges" class="btn btn-default" value="Update"></input>
 			</form>
 
-			<p>Facebook: </p>
+			<p>Connected to Facebook!</p>
 		</div>
 		
 		<a href="/">Back to Homepage</a>
