--- a/views/partials/feelzNaviBar.handlebars
+++ b/views/partials/feelzNaviBar.handlebars
@@ -15,7 +15,7 @@
 		    	    <span class="icon-bar"></span>
 				</button>
 				<!-- navibar title -->
-				<a class="navbar-brand" href="/"><b>FeelzApp</b></a>
+				<a class="navbar-brand" href="/"><b><img src="/images/logo.png" alt="FeelzApp" width="100px"></b></a>
 
 				<div class="navbar-left pull-left">
 					<p class="navbar-text">Hi, {{username}}!</p>
