--- a/views/partials/feelzNaviBarNoPost.handlebars
+++ b/views/partials/feelzNaviBarNoPost.handlebars
@@ -17,7 +17,7 @@
 		    	    <span class="icon-bar"></span>
 				</button>
 				<!-- navibar title -->
-				<a class="navbar-brand" href="/"><b><img src="/images/logo.png" alt="FeelzApp" width="100px"></b></a>
+				<a class="navbar-brand" href="/"><b><img class="logoImg" src="/images/logo.png" alt="FeelzApp"></b></a>
 
 				<div class="navbar-left pull-left">
 					<p class="navbar-text" style="margin-right:3px">Hi, {{username}}!</p>
