--- a/views/partials/feelzTitleBar.handlebars
+++ b/views/partials/feelzTitleBar.handlebars
@@ -6,7 +6,7 @@
 		<div class="container">
 			<div class="navbar-header">
 				<!-- navibar title -->
-				<a class="navbar-brand" href="/"><b><img src="/images/logo.png" alt="FeelzApp" width="100px"></b></a>
+				<a class="navbar-brand" href="/"><b><img class="logoImg" src="/images/logo.png" alt="FeelzApp"></b></a>
 			</div>
 		</div>
 	</nav>
