--- a/public/css/feelzNaviBar.css
+++ b/public/css/feelzNaviBar.css
@@ -6,17 +6,19 @@
 }
 
 .navbar-brand {
-  width: 28%;
+  width: 10%;
   margin-left: 0px;
-  padding-left: 0px;
+  margin-right: 0px;
+  padding-left: 10px;
   padding-right: 0px;
 }
+
 .logoImg {
   width: 100%;
   margin-left: 0px;
+  margin-right: 0px;
   padding-left: 0px;
   padding-right: 0px;
-
 }
 
 /* always show a collapsed menu icon */
@@ -76,4 +78,13 @@
   .navbar-nav .open .dropdown-menu > li > a:focus {
     background-image: none;
   }
-  
+
+@media (max-width: 978px) {
+    .navbar-brand {
+      width: 28%;
+      margin-left: 0px;
+      margin-right: 0px;
+      padding-left: 0px;
+      padding-right: 0px;
+    }
+}
