--- a/views/login_fb.handlebars
+++ b/views/login_fb.handlebars
@@ -33,7 +33,7 @@
                     <form id="loginform" class="form-horizontal" role="form" action="/loginFormSubmit">
                         <div class="input-group inputStyle">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                                <input id="login-username" type="text" class="form-control" name="username" value="" placeholder="Username or Email">                                        
+                                <input id="login-username" type="text" class="form-control" name="username" value="" placeholder="Facebook email">                                        
                         </div>
                         <div class="input-group inputStyle">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
@@ -50,7 +50,6 @@
                             <!-- Button -->
                             <div class="col-sm-12 controls">
                                 <input type="submit" id="btn-login" class="btn btn-success" value="Login"></input>
-                                <a id="btn-fblogin" href="/Login_Facebook" class="btn btn-primary">Login with Facebook</a>
                             </div>
                         </div>
 
