--- a/views/partials/newPost.handlebars
+++ b/views/partials/newPost.handlebars
@@ -17,7 +17,7 @@
 								<option value="">Category</option>
 							    <option value="panel-default">Chill</option>
 							    <option value="panel-primary">Sad</option>
-							    <option value="panel-success">Good</option>
+							    <option value="panel-success">Funny</option>
 							    <option value="panel-custom">Party</option>
 							    <option value="panel-warning">Happy</option>
 							    <option value="panel-danger">Angry</option>
