--- a/views/partials/sideBar.handlebars
+++ b/views/partials/sideBar.handlebars
@@ -20,7 +20,7 @@
 
 			<li role="presentation"><a class="version_a_element" href="/category/1">Chill</a></li> <!-- Grey -->
 			<li role="presentation"><a class="version_a_element" href="/category/2">Sad</a></li> <!-- Blue -->
-			<li role="presentation"><a class="version_a_element" href="/category/3">Good</a></li> <!-- Green -->
+			<li role="presentation"><a class="version_a_element" href="/category/3">Funny</a></li> <!-- Green -->
 			<li role="presentation"><a class="version_a_element" href="/category/4">Party</a></li> <!-- Purple -->
 			<li role="presentation"><a class="version_a_element" href="/category/5">Happy</a></li> <!-- Yellow -->
 			<li role="presentation"><a class="version_a_element" href="/category/6">Angry</a></li> <!-- Red -->
