--- a/views/partials/newPost.handlebars
+++ b/views/partials/newPost.handlebars
@@ -6,7 +6,7 @@
 		<div id="newpost_form">
 			<form class="newPostForm" id="newPostForm" name="newPostForm" onsubmit="return submitNewPost(this)">
 				<!-- add post title -->
-				<input id="newPostTitle" name="newPostTitle" placeholder="Post Title" type="text" required autofocus><br/>
+				<input id="newPostTitle" name="newPostTitle" placeholder="Post Title" type="text" required autofocus></input>
 				<!-- add text box -->
 				<textarea id="newPostContent" name="newPostContent" placeholder="Enter text here" required autofocus></textarea>
 				<div id="newPostButtons" class="row">
