--- a/public/css/feelzNaviBar.css
+++ b/public/css/feelzNaviBar.css
@@ -6,7 +6,7 @@
 }
 
 .navbar-brand {
-  width: 10%;
+  height: 50px;
   margin-left: 0px;
   margin-right: 0px;
   padding-left: 10px;
@@ -14,7 +14,7 @@
 }
 
 .logoImg {
-  width: 100%;
+  height: 30px;
   margin-left: 0px;
   margin-right: 0px;
   padding-left: 0px;
