add delete post

--- a/views/partials/postFull.handlebars
+++ b/views/partials/postFull.handlebars
@@ -16,6 +16,7 @@
 	    					<span class="glyphicon glyphicon-remove" aria-hidden="true" style="color:black" ></span>
 	    					<span class="sr-only">Close</span>
 	    				</a>
+	    				<button id="post-delete" class=" btn btn-default" type="button">delete</button>
 	    			</div>
 	  		 	</div>
 			 	<div class="panel-body">
