--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -30,7 +30,7 @@
                 <div class="panel-body" >
                     <div id="login-alert" class="alert alert-danger col-sm-12"></div>
                             
-                    <form id="loginform" class="form-horizontal" role="form" action="/loginFormSubmit">
+                    <form id="loginform" class="form-horizontal" role="form" action="/loginFormSubmit" method=POST>
                         <div class="input-group inputStyle">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
                                 <input id="login-username" type="text" class="form-control" name="username" value="" placeholder="Username or Email">                                        
